# ircpp

./: .gitmodules  README.md  meson.build
include/ircpp/: irc.hpp
src/: irc.cpp
